# astrum

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  astrumCircles.html  astrumCircles.js  astrumCircles.wasm  astrumDemo.html  astrumDemo.js  astrumDemo.wasm  astrumGameOfLife.html  astrumGameOfLife.js  astrumGameOfLife.wasm  astrumPong.html  astrumPong.js  astrumPong.wasm  astrumSnake.html  astrumSnake.js  astrumSnake.wasm  astrumSudoku.html  astrumSudoku.js  astrumSudoku.wasm  demo.cpp  index.html  pong.cpp
cmake/: FindSDL2.cmake  FindSDL2GFX.cmake
examples/: circles.cpp  demo.cpp  life.cpp  pong.cpp  snake.cpp  sudoku.cpp
include/astrum/: astrum.hpp  audio.hpp  constants.hpp  event.hpp  filesystem.hpp  font.hpp  graphics.hpp  image.hpp  key.hpp  keyboard.hpp  log.hpp  math.hpp  mouse.hpp  sound.hpp  system.hpp  timer.hpp  util.hpp  window.hpp
include/astrum-external/: incbin.h
include/astrum/assets/: vera_font.hpp
licenses/: licenses.md
platform/: win32.cmake  win64.cmake
src/: astrum.cpp  audio.cpp  event.cpp  filesystem.cpp  font.cpp  graphics.cpp  image.cpp  internals.hpp  keyboard.cpp  log.cpp  math.cpp  mouse.cpp  sdl.hpp  sound.cpp  system.cpp  timer.cpp  util.cpp  window.cpp
